# Renderer

./: CMakeLists.txt  Camera.cpp  Camera.hpp  Convert.cpp  Convert.hpp  Fragment.hpp  FragmentShader.cpp  FragmentShader.hpp  Mesh.cpp  Mesh.hpp  Projection.cpp  README.md  Rasterization.cpp  Rasterization.hpp  Rasterizer.cpp  Rasterizer.hpp  Render.cpp  Render.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Triangle.hpp  Type.hpp  Vertex.hpp  VertexShader.cpp  VertexShader.hpp  iodata.cpp  iodata.hpp  main.cpp
Data/: ModelConfig.txt  RenderingConfig.txt  anime_config.txt  config.txt  final.txt  model.txt
include/: BVH.hpp  BoundingBox.hpp  Camera.hpp  Convert.hpp  FastMath.hpp  FlatMaterial.hpp  FlatShader.hpp  Fragment.hpp  FrameBuffer.hpp  HitRecord.hpp  Image.hpp  Light.hpp  Material.hpp  Mipmap.hpp  Model.hpp  PBRMaterial.hpp  PBShader.hpp  PhongMaterial.hpp  PhongShader.hpp  PointLightShadowShader.hpp  Primitive.hpp  Rasterizer.hpp  Ray.hpp  RayTracer.hpp  Renderer.hpp  Shader.hpp  ShadowShader.hpp  Sphere.hpp  State.hpp  SunLightShadowShader.hpp  Texture.hpp  Triangle.hpp  Type.hpp  Uniform.hpp  Util.hpp  Vertex.hpp  iodata.hpp
src/: BVH.cpp  BoundingBox.cpp  Camera.cpp  Convert.cpp  FlatMaterial.cpp  FlatShader.cpp  FrameBuffer.cpp  Light.cpp  Material.cpp  Mipmap.cpp  Model.cpp  PBRMaterial.cpp  PBShader.cpp  PhongMaterial.cpp  PhongShader.cpp  PointLightShadowShader.cpp  Rasterizer.cpp  RayTracer.cpp  Renderer.cpp  Sphere.cpp  State.cpp  SunLightShadowShader.cpp  Texture.cpp  Triangle.cpp  iodata.cpp  main.cpp
